[package]
name = "binance-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "*"
hyper = { version = "1.5.2", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
hyper-util = { version = "*", features = ["full"] }
serde = "*"
http-body-util = "*"

[lib]
path = "lib.rs"
